[gd_scene load_steps=17 format=3 uid="uid://bh3gkb6v8e0k8"]

[ext_resource type="Texture2D" uid="uid://c74a55nfs4fc8" path="res://zdroj_obrazku/Traps/Saw/On (38x38).png" id="1_8603g"]
[ext_resource type="Script" uid="uid://cslns3ijwac6l" path="res://pila.gd" id="1_s0bqx"]
[ext_resource type="Texture2D" uid="uid://xmxeqw486cmc" path="res://zdroj_obrazku/Traps/Saw/Off.png" id="2_1md68"]
[ext_resource type="Texture2D" uid="uid://utie2m4ymsv3" path="res://zdroj_obrazku/Items/Boxes/Box1/Hit (28x24).png" id="4_epio3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ul4so"]
atlas = ExtResource("2_1md68")
region = Rect2(0, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0bqx"]
atlas = ExtResource("1_8603g")
region = Rect2(266, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_cl3e5"]
atlas = ExtResource("1_8603g")
region = Rect2(228, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_1md68"]
atlas = ExtResource("1_8603g")
region = Rect2(190, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_epio3"]
atlas = ExtResource("1_8603g")
region = Rect2(152, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtxt2"]
atlas = ExtResource("1_8603g")
region = Rect2(114, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_plhwb"]
atlas = ExtResource("1_8603g")
region = Rect2(76, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_vha1f"]
atlas = ExtResource("1_8603g")
region = Rect2(38, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3ib1"]
atlas = ExtResource("1_8603g")
region = Rect2(0, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxw46"]
atlas = ExtResource("4_epio3")
region = Rect2(0, 0, 28, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ul4so"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul4so")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0bqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cl3e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1md68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epio3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtxt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plhwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vha1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3ib1")
}],
"loop": true,
"name": &"on",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxw46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul4so")
}],
"loop": true,
"name": &"vstup",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uxw46"]
radius = 18.0

[node name="pila" type="Area2D"]
script = ExtResource("1_s0bqx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ul4so")
animation = &"vstup"
autoplay = "vstup"
frame_progress = 0.431185

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uxw46")
disabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
